OpenVi 7.4.23 -> OpenVi 7.4.24: Tue Oct 10 19:47:07 2023
        + Silence a warning when building with recent Clang compilers.
        + Treat consecutive paragraph indicators as different paragraphs;
          Consecutive empty lines count toward the same state, so there're
          2x states (to get in and out). `^L` and `.PP` are counted as text,
          hitting those in the text should be treated as getting out of a
          paragraph and then getting in. From Walter Alejandro Iglesias and
          Zhihao Yuan in nvi2; ok bluhm@
        + Fix typo in last ChangeLog entry

OpenVi 7.3.22 -> OpenVi 7.4.23: Sat Jun 24 03:12:41 2023
        + Bump OpenBSD date synchronization version part to 06/23/2023
        + Remove unused `__cur_db` variable in Berkeley DB code; ok millert@
        + Spelling fixes (in comments only) for regex from Paul Tagliamonte
        + Remove vestigial `?` case from `xinstall` top-level `getopt` loop;
          Prompted by dlg@, help from dlg@, millert@; ok naddy@ millert@ dlg@
        + Packaging improvements from @jswank to honor DESTDIR to support
          relocatable installation, use relative symlinks for `view` and `ex`
          programs, and not create `/var/tmp/vi.recover` during installation

OpenVi 7.2.21 -> OpenVi 7.3.22: Tue Apr 11 07:54:09 2023
        + OpenBSD 7.3 released; bumping OpenBSD major version part to 7.3
        + Bump OpenBSD date synchronization version part to 01/29/2023
        + Autoprint line number to match the confirmation line;
          patch from `nvi2` via millert@
        + Fix crash when tags file pattern has a trailing `\`, patch
          via `nvi2`; co-authored by Craig Leres <leres@FreeBSD.org>

OpenVi 7.2.20 -> OpenVi 7.2.21: Tue Jan 31 03:26:07 2023
        + Fix handling of ex_range escaped backslashes; If there are two
          consecutive backslashes, skip past both so the second is not
          mistakenly treated as an escape character. This is consistent